Fix margin so that gallery description isn't hidden behind the navbar

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,5 @@
 #description {
-  margin: 30px;
+  margin: 60px;
 }
 
 h1 {
